updated IDEA version and plugin versions