@@ -28,6 +28,7 @@ import java.awt.*;
 import java.io.FileNotFoundException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -83,24 +84,20 @@ public class CptPluginSettingsForm implements CptPluginSettings.Holder, Disposab
 						setEditorContent(file.exists() ? CptUtil.getContent(file) : "");
 
 						if (selectedFile.isSelfMade()) {
-							templatesFileInfoLabel.setText("<html>User Template File \"" + fileName + "\"");
+							templatesFileInfoLabel.setText("<html><body>User Template File \"" + fileName + "\"");
 						} else if (selectedFile.isLocal()) {
-							String s = "<html>Local Template File \"" + fileName + "\"<table>";
-							s += "<tr><td>URL:</td><td><a href=\"" + selectedFile.getUrl().toString() + "\">" + limitTo50(selectedFile.getUrl().toString()) + "</a></td></tr></table>";
+							String s = "<html><body>Local Template File \"" + fileName + "\"<table style='width: 100%'>";
+							s += "<tr><td>URL:</td><td style='width: 100%'><a href=\"" + selectedFile.getUrl().toString() + "\">" + limitTo50(selectedFile.getUrl().toString()) + "</a></td></tr></table>";
 							templatesFileInfoLabel.setText(s);
 						} else if (selectedFile.getWebTemplateFile() != null) {
 							val webTemplateFile = selectedFile.getWebTemplateFile();
 							String subject = "";
-							try {
-								subject = URLEncoder.encode("[Custom Postfix Templates] " + fileName, "UTF-8").replaceAll("\\+", "%20");
-							} catch (UnsupportedEncodingException e) {
-								e.printStackTrace();
-							}
-							String s = "<html>Web Template File \"" + fileName + "\"<table>";
-							s += "<tr><td>Author:</td><td><a href=\"mailto:" + webTemplateFile.email + "?subject=" + subject + "\">" + webTemplateFile.author + "</a></td></tr>";
-							s += "<tr><td>Website:</td><td><a href=\"" + webTemplateFile.website + "\">" + limitTo50(webTemplateFile.website) + "</a></td></tr>";
-							s += "<tr><td>URL:</td><td><a href=\"" + selectedFile.getUrl().toString() + "\">" + limitTo50(selectedFile.getUrl().toString()) + "</a></td></tr>";
-							s += "<tr><tds>Description:</td><td>" + webTemplateFile.description + "</td></tr></table>";
+							subject = URLEncoder.encode("[Custom Postfix Templates] " + fileName, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
+							String s = "<html><body>Web Template File \"" + fileName + "\"<table style='width: 100%'>";
+							s += "<tr><td>Author:</td><td style='width: 100%'><a href=\"mailto:" + webTemplateFile.email + "?subject=" + subject + "\">" + webTemplateFile.author + "</a></td></tr>";
+							s += "<tr><td>Website:</td><td style='width: 100%'><a href=\"" + webTemplateFile.website + "\">" + limitTo50(webTemplateFile.website) + "</a></td></tr>";
+							s += "<tr><td>URL:</td><td style='width: 100%'><a href=\"" + selectedFile.getUrl().toString() + "\">" + limitTo50(selectedFile.getUrl().toString()) + "</a></td></tr>";
+							s += "<tr><tds>Description:</td><td style='width: 100%'>" + webTemplateFile.description + "</td></tr></table>";
 							templatesFileInfoLabel.setText(s);
 						} else {
 							templatesFileInfoLabel.setText("");
